# python-agent-template_v1

./: .commitlintrc.json  .dockerignore  .gitignore  Dockerfile  GITHUB_ACTIONS_FIX_SUMMARY.md  GOTCHAS.md  ISSUES.md  Makefile  PROJECT-PLAN_20250108_GitHub-Actions-Fix.md  QUICK-START.md  README.md  SETUP.md  conftest.py  docker-compose.test.yml  docker-compose.yml  env.example  pyproject.toml
.cursor/rules/: RIPER-5-MODE_v2.mdc  follow-adrs.mdc  markdown-rules.mdc  markdown-rules_v1.3.0.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: quality-assurance.yml  test.yml
apps/: main.py
apps/routes/: __init__.py  agent_routes.py  examples.py  pipeline_routes.py
docs/: README.md  philosophy.md
docs/adrs/: 000-adr-index.md  001-system-architecture-overview.md  002-domain-driven-design-architecture.md  003-application-layer-patterns.md  004-file-organization-standards.md  005-bounded-context-settings.md  006-entity-first-database-design.md  007-test-environment-configuration.md  999-adr-template.md
docs/articles/: Building Agent projects without losing your mind.md
docs/development/: environment.md  git-workflow.md  infrastructure-as-code.md  makefile-tasks.md  production-readiness-checlist.md
docs/guides/: bounded-context-guide.md  settings.md
notebooks/: 01_basic_agent_example.ipynb  README.md
scripts/: __init__.py  copy_bounded_context.sh  generate_postman_collection.py  service_status.py  setup.sh  setup_env.py  start_services.py  stop_services.py  validate_domain.py  verify_setup.py
scripts/utils/: __init__.py  port_manager.py  service_manager.py
src/: README.md
src/agent_project/: __init__.py  correlation.py
src/agent_project/application/services/: __init__.py  agent_service.py
src/agent_project/config/: __init__.py  banner.py  constants.py  settings.py  settings.py.txt
src/agent_project/domain/: __init__.py
src/agent_project/domain/entities/: __init__.py  agent.py  (+1 more)
src/agent_project/infrastructure/: __init__.py  decorators.py  logging.py  middleware.py
tests/: __init__.py  test_setup_env.py
tests/infrastructure/: __init__.py  test_decorators.py
tests/infrastructure/database/: __init__.py  test_sqlalchemy_config.py
tests/integration/: test_dummy.py
tests/test_files/: test_audio_memo_20250415.aiff  test_audio_memo_20250415.m4a
tests/unit/config/: test_constants.py  test_database_settings.py  test_settings.py
tests/unit/infrastructure/: test_decorators.py  test_logging.py
tests/unit/shared/: test_correlation.py
tools/: agent_cli.py
(+22 files in other folders)
